Make bridge-java Java 8 compatible for plugin runtime